// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonText control to the left 1`] = `
<ButtonText
  className="test-class"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  justify={0}
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "blue",
      "borderColor": "green",
      "color": "white",
    }
  }
  testing={true}
  text="test text"
  visible={true}
  width=""
>
  <div
    className="ui-button-text buttonText ripple normal test-class"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "blue",
        "borderColor": "green",
        "color": "white",
      }
    }
  >
    <div
      className="content left normal"
    >
      test text
    </div>
    <Icon
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      visible={true}
      width=""
    >
      <styled.i
        className="ui-icon fa fa-fw fa-bomb"
        sizing="normal"
        style={Object {}}
      >
        <i
          className="ui-icon fa fa-fw fa-bomb sc-bdVaJa ifzSmG"
          style={Object {}}
        />
      </styled.i>
    </Icon>
  </div>
</ButtonText>
`;

exports[`Test disabling of a ButtonText control 1`] = `
<ButtonText
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  justify={1}
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text=""
  visible={true}
  width=""
>
  <div
    className="ui-button-text buttonText normal disabled nohover"
    onClick={[Function]}
    style={Object {}}
  >
    <Icon
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      visible={true}
      width=""
    >
      <styled.i
        className="ui-icon fa fa-fw fa-bomb"
        sizing="normal"
        style={Object {}}
      >
        <i
          className="ui-icon fa fa-fw fa-bomb sc-bdVaJa ifzSmG"
          style={Object {}}
        />
      </styled.i>
    </Icon>
    <div
      className="content right normal"
    />
  </div>
</ButtonText>
`;

exports[`Test making a ButtonText control invisible 1`] = `
<ButtonText
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  justify={1}
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text=""
  visible={false}
  width=""
>
  <div
    className="ui-button-text buttonText ripple normal invisible"
    onClick={[Function]}
    style={Object {}}
  >
    <Icon
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      visible={true}
      width=""
    >
      <styled.i
        className="ui-icon fa fa-fw fa-bomb"
        sizing="normal"
        style={Object {}}
      >
        <i
          className="ui-icon fa fa-fw fa-bomb sc-bdVaJa ifzSmG"
          style={Object {}}
        />
      </styled.i>
    </Icon>
    <div
      className="content right normal"
    />
  </div>
</ButtonText>
`;

exports[`Test retrieval of ButtonText props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "id": "",
  "imageFile": "",
  "justify": 1,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noicon": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "text": "",
  "visible": true,
  "width": "",
}
`;
